简单的修改

--- a/v2rayN/v2rayN/Forms/MainForm.zh-Hans.resx
+++ b/v2rayN/v2rayN/Forms/MainForm.zh-Hans.resx
@@ -459,7 +459,7 @@
     <value>68, 53</value>
   </data>
   <data name="tsbPromotion.Text" xml:space="preserve">
-    <value>    推广1    </value>
+    <value>    谷歌    </value>
   </data>
   <data name="tsbClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
